fixed switch to light-mode

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="darkMode">
                 <input type="checkbox" id="darkModeToggle">
                 <label for="darkModeToggle" id="darkModeLabel">
-                    <img src="/dark theme icon/moon.png" alt="" id="icon">
+                    <img src="/assests/moon.png" alt="" id="icon">
                 </label>
             </div>
         </div>
